Implement event tree model
The photos themselves are present in the internal data structure but are
hidden by making EventItem's rowCount zero even though it holds a vector
of PhotoItems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,13 @@ find_package(Qt5 COMPONENTS Widgets Sql QuickWidgets)
 set(SOURCES
     main.cpp
     mainwindow.cpp
+    models/eventitem.cpp
+    models/eventtreeitem.cpp
     models/eventtreemodel.cpp
+    models/monthitem.cpp
+    models/photoitem.cpp
+    models/rootitem.cpp
+    models/yearitem.cpp
 )
 
 set(UIFORMS
