Add image provider to supply thumbnails to QML code
Currently it only produces a dummy image.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ set(SOURCES
     models/photolistmodel.cpp
     models/rootitem.cpp
     models/yearitem.cpp
+    thumbnailprovider.cpp
 )
 
 set(UIFORMS
