Add Settings dialog
The main purpose currently is to set the thumbnail cache path, but
included is a slider for future experimentation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,11 +32,13 @@ set(SOURCES
     models/photoitem.cpp
     models/rootitem.cpp
     models/yearitem.cpp
+    settingsdialog.cpp
     thumbnailprovider.cpp
 )
 
 set(UIFORMS
     mainwindow.ui
+    settingsdialog.ui
 )
 
 set(RESOURCES
