Hide photos in tree differently

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ set(SOURCES
     models/eventitem.cpp
     models/eventtreeitem.cpp
     models/eventtreemodel.cpp
+    models/hidephotosproxymodel.cpp
     models/monthitem.cpp
     models/photoitem.cpp
     models/photolistmodel.cpp
