Add picture provider
Add a new provider to supply QML with the actual. Pictures. It could
probably have been the same class...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ set(SOURCES
     models/photoitem.cpp
     models/rootitem.cpp
     models/yearitem.cpp
+    pictureprovider.cpp
     settingsdialog.cpp
     thumbnailprovider.cpp
 )
