Move models and some logic into own object
A new class "Shotwin" is introduced to hold the models and proxies. The
idea is that the object acts as a central place of logic. To the outside
it presents three different models and knows when which model should be
shown.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set(SOURCES
     models/yearitem.cpp
     pictureprovider.cpp
     settingsdialog.cpp
+    shotwin.cpp
     thumbnailprovider.cpp
 )
 
