Use a new tree item for headers
The visual appearance is almost the same, except it can be collapsed.
This is in anticipation of adding tags to the model.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set(SOURCES
     models/eventitem.cpp
     models/eventtreeitem.cpp
     models/eventtreemodel.cpp
+    models/headeritem.cpp
     models/hidephotosproxymodel.cpp
     models/monthitem.cpp
     models/photoitem.cpp
