Introduce new model for the photo list
Keep photos in a separate, flat model. Add a proxy that filters based on
event id. This model is introduced because it will be easier to
implement filtering by tags.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,9 +28,11 @@ set(SOURCES
     models/eventitem.cpp
     models/eventtreeitem.cpp
     models/eventtreemodel.cpp
+    models/eventfilteredphotomodel.cpp
     models/hidephotosproxymodel.cpp
     models/monthitem.cpp
     models/photoitem.cpp
+    models/photomodel.cpp
     models/rootitem.cpp
     models/yearitem.cpp
     pictureprovider.cpp
