Add flat event model with filter
Add a model that representes the Events in a flat model, very similar
to the PhotoModel. Also add a filter model that can filter the event
model based on year and month.

Adding this removes the need for the FilterFlatten model.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,9 @@ find_package(Qt5 COMPONENTS Widgets Sql QuickWidgets)
 set(SOURCES
     main.cpp
     mainwindow.cpp
+    models/datefilteredeventmodel.cpp
     models/eventitem.cpp
+    models/eventmodel.cpp
     models/eventtreeitem.cpp
     models/eventtreemodel.cpp
     models/eventortagfilteredphotomodel.cpp
